--- a/web-client/tsconfig.json
+++ b/web-client/tsconfig.json
@@ -1,25 +1,21 @@
 {
   "compilerOptions": {
+    "outDir": "./dist/",
+    "sourceMap": true,
+    "noImplicitAny": true,
+    "module": "commonjs",
     "target": "es5",
-    "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
-    ],
+    "jsx": "react",
+    "lib": ["es5", "scripthost", "dom", "es2015"],
     "allowJs": true,
-    "skipLibCheck": true,
-    "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "strict": true,
-    "forceConsistentCasingInFileNames": true,
-    "module": "esnext",
-    "moduleResolution": "node",
-    "resolveJsonModule": true,
-    "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react"
+    "esModuleInterop": true
   },
-  "include": [
-    "src"
+  "exclude": [
+    "**/*.test.tsx",
+    "node_modules",
+    "../node_modules",
+    "../common/node_modules",
+    "dist"
   ]
 }
