--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -10,7 +10,10 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
-    "react-native": "0.63.3"
+    "@react-native-async-storage/async-storage": "^1.13.2",
+    "@types/react-router-native": "^5.1.0",
+    "react-native": "0.63.3",
+    "react-router-native": "^5.2.0"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^1.1.0",
