--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -10,12 +10,16 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx"
   },
   "dependencies": {
+    "@babel/core": "^7.8.4",
+    "@babel/runtime": "^7.8.4",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@types/react-router-native": "^5.1.0",
+    "common-libs": "0.0.1",
     "react-native": "0.63.3",
     "react-router-native": "^5.2.0"
   },
   "devDependencies": {
+    "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "^1.1.0",
     "@types/react-native": "^0.63.2",
     "metro-react-native-babel-preset": "^0.59.0"
