--- a/package.json
+++ b/package.json
@@ -49,8 +49,6 @@
     "@types/reselect": "^2.2.0",
     "@types/uuid": "^7.0.3",
     "react-test-renderer": "^16.13.1",
-    "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
     "@types/jest": "^25.2.3",
     "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
@@ -60,7 +58,7 @@
     "babel-jest": "^24.9.0"
   },
   "workspaces": {
-    "packages": ["web-client", "mobile-client", "common"],
+    "packages": ["web-client", "mobile-client", "common-libs"],
     "nohoist": ["**/react-native", "**/react-native/**", "**/react-native/**", "**/@react-native-community/**", "**/react-router-native/**"]
   }
 }
