--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -13,15 +13,15 @@
     "@babel/core": "^7.8.4",
     "@babel/runtime": "^7.8.4",
     "@react-native-async-storage/async-storage": "^1.13.2",
-    "@types/react-router-native": "^5.1.0",
     "common-libs": "0.0.1",
+    "expo-yarn-workspaces": "^1.2.1",
     "react-native": "0.63.3",
     "react-router-native": "^5.2.0"
   },
   "devDependencies": {
-    "@babel/runtime": "7.12.5",
     "@react-native-community/eslint-config": "^1.1.0",
-    "@types/react-native": "^0.63.2",
+    "@types/react-native": "^0.63.37",
+    "@types/react-router-native": "^5.1.0",
     "metro-react-native-babel-preset": "^0.59.0"
   },
   "jest": {
