--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "@types/redux-saga": "^0.10.5",
     "@types/reselect": "^2.2.0",
     "@types/uuid": "^7.0.3",
+    "@types/react-router-native": "^5.1.0",
+    "@types/react-native": "^0.63.37",
     "react-test-renderer": "^16.13.1",
     "@types/jest": "^25.2.3",
     "@types/react-test-renderer": "^16.9.2",
@@ -59,6 +61,14 @@
   },
   "workspaces": {
     "packages": ["web-client", "mobile-client", "common-libs"],
-    "nohoist": ["**/react-native", "**/react-native/**", "**/react-native/**", "**/@react-native-community/**", "**/react-router-native/**"]
+    "nohoist": ["**/react-native",
+      "**/react-native/**",
+      "**/react-native/**",
+      "**/@react-native-community/**",
+      "**/react-router-native/**",
+      "**/@types/react-native/**",
+      "**/@types/react-router-native/**",
+      "expo-yarn-workspaces"
+    ]
   }
 }
