--- a/common-libs/package.json
+++ b/common-libs/package.json
@@ -9,5 +9,11 @@
     "@babel/runtime": "^7.12.5"
   },
   "devDependencies": {
+  },
+  "workspaces": {
+    "nohoist": [
+      "@babel/runtime/**",
+      "@babel/core/**"
+    ]
   }
 }
