--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -8,7 +8,7 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "clean": "rm -rf ios/Pods && watchman watch-del-all"
+    "clean": "rm -rf ios/Pods && watchman watch-del-all && rm -rf node_modules && yarn cache clean -f"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
@@ -31,6 +31,16 @@
       "jsx",
       "json",
       "node"
+    ]
+  },
+  "workspaces": {
+    "nohoist": [
+      "react-native",
+      "react-native/**",
+      "@react-native-community/**",
+      "react-router-native/**",
+      "@types/react-native/**",
+      "@types/react-router-native/**"
     ]
   }
 }
