--- a/common-libs/package.json
+++ b/common-libs/package.json
@@ -2,6 +2,7 @@
   "name": "common-libs",
   "version": "0.0.1",
   "license": "MIT",
+  "private": true,
   "main": "src/index.ts",
   "dependencies": {
     "cross-env": "5.0.5",
