--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -8,13 +8,24 @@
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "clean": "rm -rf ios/Pods && watchman watch-del-all && rm -rf node_modules && yarn cache clean -f"
+    "clean": "rm -rf ios/Pods && watchman watch-del-all && rm -rf node_modules && yarn cache clean -f",
+    "clean:android": "cd android && ./gradlew clean && cd ../"
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.13.2",
+    "@types/react": "^17.0.0",
+    "@types/react-redux": "^7.1.11",
+    "@types/redux-logger": "^3.0.8",
     "common-libs": "0.0.1",
-    "react-native": "0.63.3",
-    "react-router-native": "^5.2.0"
+    "react": "^17.0.1",
+    "react-native": "^0.63.4",
+    "react-redux": "^7.2.2",
+    "react-router-native": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   },
   "devDependencies": {
     "@react-native-community/eslint-config": "^1.1.0",
@@ -36,6 +47,8 @@
   "workspaces": {
     "nohoist": [
       "react-native",
+      "react-redux",
+      "react-redux/**",
       "react-native/**",
       "@react-native-community/**",
       "react-router-native/**",
