--- a/package.json
+++ b/package.json
@@ -8,14 +8,6 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
-    "react": "^16.13.1",
-    "react-imask": "^6.0.3",
-    "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
-    "typesafe-actions": "^5.1.0",
     "typescript": "~3.7.2",
     "uuid": "^8.0.0",
     "@babel/core": "^7.12.9",
@@ -40,27 +32,11 @@
     ]
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-redux": "^7.1.8",
-    "@types/redux": "^3.6.0",
-    "@types/redux-actions": "^2.6.1",
-    "@types/redux-saga": "^0.10.5",
-    "@types/reselect": "^2.2.0",
     "@types/uuid": "^7.0.3",
-    "@types/react-router-native": "^5.1.0",
-    "@types/react-native": "^0.63.37",
-    "react-test-renderer": "^16.13.1",
-    "@types/jest": "^25.2.3",
-    "@types/react-test-renderer": "^16.9.2",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
-    "eslint": "^6.5.1",
-    "jest": "24.9.0",
-    "babel-jest": "^24.9.0"
+    "eslint": "^6.5.1"
   },
   "workspaces": {
     "packages": ["web-client", "mobile-client", "common-libs"]
