--- a/web-client/package.json
+++ b/web-client/package.json
@@ -1,41 +1,13 @@
 {
   "name": "web-client",
   "version": "0.1.0",
-  "private": false,
+  "private": true,
   "license": "MIT",
   "repository": {
     "url": "https://github.com/DmitriyNoa/react-typescript-sagas-hooks-starter.git"
   },
   "dependencies": {
-    "@babel/core": "7.9.0",
-    "@typescript-eslint/eslint-plugin": "^2.10.0",
-    "@typescript-eslint/parser": "^2.10.0",
-    "awesome-typescript-loader": "^5.2.1",
-    "css-loader": "^5.0.1",
-    "dotenv": "^8.2.0",
-    "emotion": "^10.0.27",
-    "express": "^4.17.1",
-    "html-webpack-plugin": "^4.5.0",
-    "jest": "24.9.0",
-    "react": "16.14.0",
-    "react-dom": "16.14.0",
-    "react-imask": "^6.0.3",
-    "react-redux": "^7.2.2",
-    "react-router-dom": "^5.2.0",
-    "redux": "^4.0.5",
-    "redux-actions": "^2.6.5",
-    "redux-saga": "^1.1.3",
-    "reselect": "^4.0.0",
-    "style-loader": "^2.0.0",
-    "ts-loader": "^8.0.11",
-    "typesafe-actions": "^5.1.0",
-    "typescript": "~3.7.2",
-    "uuid": "^8.0.0",
-    "webpack": "^5.6.0",
-    "webpack-cli": "^4.2.0",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-node-externals": "^2.5.2",
-    "common-libs": "0.0.1"
+
   },
   "scripts": {
     "start": "node static-server.js",
@@ -59,13 +31,7 @@
     ]
   },
   "devDependencies": {
-    "@types/enzyme": "^3.10.5",
-    "@types/enzyme-adapter-react-16": "^1.0.6",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.6",
-    "cross-env": "5.0.5",
-    "enzyme": "^3.11.0",
-    "enzyme-adapter-react-16": "^1.15.2"
+
   },
   "jest": {
     "roots": [
