--- a/web-client/package.json
+++ b/web-client/package.json
@@ -7,7 +7,24 @@
     "url": "https://github.com/DmitriyNoa/react-typescript-sagas-hooks-starter.git"
   },
   "dependencies": {
-
+    "@emotion/css": "^11.0.0",
+    "@emotion/react": "^11.1.2",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.11",
+    "@types/react-router-dom": "^5.1.6",
+    "@types/redux-logger": "^3.0.8",
+    "common-libs": "0.0.1",
+    "emotion": "^11.0.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^1.1.3",
+    "typesafe-actions": "^5.1.0"
   },
   "scripts": {
     "start": "node static-server.js",
@@ -31,7 +48,19 @@
     ]
   },
   "devDependencies": {
-
+    "@babel/core": "7.9.0",
+    "@typescript-eslint/eslint-plugin": "^2.10.0",
+    "@typescript-eslint/parser": "^2.10.0",
+    "awesome-typescript-loader": "^5.2.1",
+    "css-loader": "^5.0.1",
+    "dotenv": "^8.2.0",
+    "html-webpack-plugin": "^4.5.0",
+    "style-loader": "^2.0.0",
+    "ts-loader": "^8.0.11",
+    "webpack": "^5.6.0",
+    "webpack-cli": "^4.2.0",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-node-externals": "^2.5.2"
   },
   "jest": {
     "roots": [
@@ -86,6 +115,18 @@
   "babel": {
     "presets": [
       "react-app"
+    ]
+  },
+  "workspaces": {
+    "nohoist": [
+      "react-redux",
+      "react-redux/**",
+      "react-dom",
+      "react-dom/**",
+      "react-router-dom",
+      "react-router-dom/**",
+      "emotion",
+      "emotion/**"
     ]
   }
 }
