--- a/mobile-client/package.json
+++ b/mobile-client/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "android": "react-native run-android",
-    "ios": "react-native run-ios",
+    "android": "API_URL=http://10.0.2.2:4000 react-native run-android",
+    "ios": "API_URL=http://10.0.2.2:4000 react-native run-ios",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
@@ -16,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-redux": "^7.1.11",
     "@types/redux-logger": "^3.0.8",
+    "babel-plugin-transform-inline-environment-variables": "^0.4.3",
     "common-libs": "0.0.1",
     "react": "^17.0.1",
     "react-native": "^0.63.4",
